Enhance secrets and users management for admin and user
Refactored backend SecretController to decrypt secrets for admin and improved error handling. Enabled method-level security in SecurityConfig. Updated frontend to distinguish between admin and user secrets pages, added credentials to fetch requests, and improved reactivity to route changes in admin/user secrets and users pages. Fixed login function to use form values.